--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "colors": "1.1.2",
+    "css-loader": "0.28.7",
     "express": "4.16.2",
     "gulp-tsc": "1.3.2",
+    "imap-parser": "0.0.3",
     "mysql2": "1.5.1",
+    "node-sass": "^4.7.2",
     "react": "16.2.0",
     "react-dom": "16.2.0",
+    "sass-loader": "^6.0.6",
+    "semantic-ui-react": "^0.77.1",
     "sequelize": "4.28.6",
     "smtp-server": "3.4.1",
+    "style-loader": "^0.19.1",
     "tsc": "1.20150623.0",
     "typescript": "2.6.2",
     "webpack": "3.10.0",
