--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "eslint-plugin-prettier": "^3.4.0",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.3.0",
+    "sass": "^1.32.12",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "react": "17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
