--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "classnames": "^2.3.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-router-dom": "^5.2.0"
   }
 }
