--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "parcel build static/index.html",
     "start": "parcel static/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
