--- a/package.json
+++ b/package.json
@@ -19,17 +19,23 @@
   },
   "homepage": "https://github.com/albertlockett/website#readme",
   "devDependencies": {
+    "@parcel/config-default": "^2.2.0",
+    "@parcel/transformer-inline-string": "^2.2.0",
+    "@parcel/transformer-mdx": "^2.2.0",
+    "@parcel/transformer-sass": "^2.2.0",
+    "@parcel/transformer-typescript-tsc": "^2.2.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "parcel-bundler": "^1.12.5",
+    "parcel": "^2.2.0",
     "prettier": "^2.3.0",
     "sass": "^1.32.12",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@mdx-js/react": "^1.6.22",
     "classnames": "^2.3.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
