--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "website",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "build": "parcel build static/index.html",
     "start": "parcel static/index.html",
@@ -40,6 +39,7 @@
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-syntax-highlighter": "15.4.5"
   }
 }
