--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
+    "@parcel/transformer-svg-react": "2.2.1",
     "classnames": "^2.3.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
