--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "eslint-plugin-prettier": "^3.4.0",
     "parcel": "^2.2.0",
     "prettier": "^2.3.0",
+    "process": "^0.11.10",
     "sass": "^1.32.12",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
     "@parcel/transformer-svg-react": "2.2.1",
+    "@react95/core": "6.1.2",
+    "@react95/icons": "2.0.7",
     "classnames": "^2.3.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
